[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxsyncpy"
version = "0.1.0"
description = "Linux-specific clone of SettingsSyncPy with independent libraries."
authors = [{name = "Converted", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["gdown"]
keywords = ["preinstall", "scanner", "gdown", "installer", "linux"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: POSIX :: Linux",
]

[project.scripts]
linuxsyncpy-preinstall = "linuxsyncpy.cli:main"
preinstall = "linuxsyncpy.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["linuxsyncpy", "linuxsyncpy.scripts"]

[tool.setuptools.package-dir]
linuxsyncpy = "."

[tool.setuptools.package-data]
linuxsyncpy = ["scripts/*.py"]

